--- a/styles/common.css
+++ b/styles/common.css
@@ -4,13 +4,88 @@
     box-sizing: border-box;
 }
 body {
-    max-width: 1366px;
-    min-width: 375px;
-    background-color: #E9DED4;
+    min-width: 100%;
+    max-width: 100vw;
+    min-height: 100%;
+    max-height: 100vh;
+    height: 100dvh;
+    background-color: var(--color-bg-body);
+    overflow-x: hidden;
+}
+h1, h2, h3, h4, p {
+    font-family: "Golos Text", serif;
+    font-weight: 400;
+    color: var(--color-gray-dark);
 }
 h1 {
     font-size: 60px;
 }
 h2 {
-    
+    font-size: 54px;
+}
+h3, .h3 {
+    font-size: 36px;
+}
+h2, h3, .h3 {
+    text-transform: uppercase;
+    font-weight: 400;
+}
+h4 {
+    font-size: 24px;
+}
+p {
+    font-size: 20px;
+}
+p.medium {
+    font-size: 18px;
+}
+p.small,
+span.small{
+    font-size: 16px;
+}
+a {
+    text-decoration: none;
+}
+a, a p {
+    color: var(--color-blue-link);
+}
+article {
+    width: 100%;
+    height: max-content;
+}
+section {
+    grid-column: 1/-1;
+}
+button {
+    outline: none;
+    background-color: unset;
+    border: none;
+}
+.attention-text {
+    color: var(--color-red);
+}
+.crossed_out {
+    position: relative;
+}
+.crossed_out:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: var(--color-red);
+    transform: translateY(-50%);
+}
+.merriweather-font {
+    font-family: "Merriweather", serif;
+}
+
+.section-welcome__container,
+.main__wrapper, .footer {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    margin: 0 auto;
+    max-width: 1366px;
+    min-width: 375px;
 }
