--- a/styles/variables/colors.css
+++ b/styles/variables/colors.css
@@ -1,3 +1,19 @@
 :root {
-    --color-bg-body: var(--color-bg-body);
+    --color-bg-body: #E9DED4;
+
+    --color-gray-dark: #313131;
+    --color-gray-opacity: #6f6f6f;
+    --color-gray-light: #D0D0D0;
+    --color-gray: #8B8B8B;
+    --color-gray-highlight: #D6D6D6;
+
+    --color-white: #fff;
+    --color-black: #1F1F1F;
+
+    --color-red: #F54932;
+
+    --color-blue-link: #3057A2;
+
+    --color-yellow: #FBCE51;
+
 }
